fix invisible text

--- a/about/geircv.css
+++ b/about/geircv.css
@@ -59,7 +59,6 @@ h1
 .section .content p.clientaddress
 {
 	font-style: italic;
-	color: #333;
 	margin: 0px;
 }
 .section .content ul
